tests/flat_file/ui/standard/invalid_generics.stderr
error: expected 2 generic parameters, found 1
 --> tests/flat_file/ui/standard/invalid_generics.rs:3:1
  |
3 | #[auto_register_type(generics(u32))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `auto_register_type` (in Nightly builds, run with -Z macro-backtrace for more info)
